[package]
name = "sse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
sse-client = "1.1.1"
tokio-stream = "0.1.7"
pretty_env_logger = "0.4.0"
