[package]
name = "ws"
version = "0.1.0"
edition = "2018"

[dependencies]
tiny-tokio-actor = "0.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
env_logger = "0.9"
dotenv = "0.15.0"
log = "0.4"
thiserror = "1.0"
